making chart pagination follow mobile orientation, fix HDX logo z-index #36

--- a/src/app/home/charts.less
+++ b/src/app/home/charts.less
@@ -62,6 +62,7 @@
     position: absolute;
     right:10px;
     bottom: 5px;
+    z-index: 1001;
   }
   &.slide{
     .toggle{
@@ -91,13 +92,12 @@
   }
   #chart-pagination{
     display: none;
-    bottom: 25px;
-    left: 50%;
     position: absolute;
+    right: 0;
     .dot{
       background-color: #000;
       border-radius: 50%;
-      display: inline-block;
+      display: block;
       height: 10px;
       margin-right: 5px;
       opacity: 0.2;
@@ -138,7 +138,12 @@
       }
     }
     #chart-pagination{
+      bottom: 50%;
       display: block;
+      .dot{
+        display: block;
+        margin-bottom: 5px;
+      }
     }
     &.slide{
       right: -100%;
@@ -222,7 +227,13 @@
       display: block;
     }
     #chart-pagination{
-      bottom: 18px;
+      bottom: 15px;
+      left: 50%;
+      right: auto;
+      .dot{
+        display: inline-block;
+        margin-right: 5px;
+      }
     }
   }
 }
